Code for RabbitMQ tutorial